@@ -82,6 +82,7 @@ libsteticui_dll_resources =  \
 	
 libsteticui_dll_references =  \
 	-pkg:gconf-sharp-2.0 \
+	-pkg:glib-sharp-2.0 \
 	-pkg:gnome-sharp-2.0 \
 	-pkg:gtk-sharp-2.0 \
 	-r:$(top_builddir)/bin/libstetic.dll \
